<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/lt_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="@dimen/cv_tv_heading" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your age"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@color/black" />

            <!--gender-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/gender"
                android:textSize="@dimen/cv_tv_heading" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/rb_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/other" />

            </RadioGroup>

            <!--language-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/languages"
                android:textSize="@dimen/cv_tv_heading" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter languages spoken by you"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:textColor="@color/black" />

            <!--hobbies-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/hobbies"
                android:textSize="@dimen/cv_tv_heading" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_hobbies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your hobbies"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:textColor="@color/black" />

            <!--language-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/address"
                android:textSize="@dimen/cv_tv_heading" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your address"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences|textMultiLine"
                android:textColor="@color/black" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/lt_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_ht"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/save"
            android:textAllCaps="false" />

    </LinearLayout>

</RelativeLayout>